Fixed headers site-wide and made old floats into flex

--- a/blog.html
+++ b/blog.html
@@ -48,11 +48,11 @@
             </ul>
         <nav> 
     </div>
+    <header role = “banner”>
+        <h1 class="headline">Blog</h1>
+        <p class="tagline">Here are some of my thoughts! I would love to hear yours as well!</p>
+    </header>
     <main role =”main”> 
-        <header role = “banner”>
-            <h1 class="headline">Blog</h1>
-            <p class="tagline">Here are some of my thoughts! I would love to hear yours as well!</p>
-        </header><!--/.banner-->
         <button onclick="blogShowHide()">Submit Post</button>
         <form class="form_full" id="form_full" action="">
             <div class="form_head">
