--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             </ul>
         </nav> 
     </div>
+    <header role = “banner”>
+        <h1 class="headline">Jake St. Germain</h1>
+        <p class="tagline">Registered Nurse and Registered Nerd. Part time developer and full time cat enthusiast.</p>
+    </header>
     <main role =”main”> 
-        <header role = “banner”>
-            <h1 class="headline">Jake St. Germain</h1>
-            <p class="tagline">Registered Nurse and Registered Nerd. Part time developer and full time cat enthusiast.</p>
-        </header><!--/.banner-->
         <div class="info">
             <div class="col aboutme">
                 <img class="aboutMeBodyImg" src="imgs/meRN.JPG" alt="Jake">
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="col inspirations">
-                <h2>Inspirations</h2>
+                <h2>Influences</h2>
                 <div class="insp_icon">
                     <a href="#" class="rick">
                         <img src="imgs/rick.jpg" alt="Photo of Richard St. Germain">
