--- a/randomlink.html
+++ b/randomlink.html
@@ -48,12 +48,13 @@
             </ul>
         </nav> 
     </div>
-    <main role =”main”> 
-        <header role = “banner”>
-            <h1 class="headline brad">Random Link</h1>
-            <p class="tagline">ALL possible links are wholesome, educational, or charitable. None of
-                them will link to opinions or false information. No possible link will harm your computer and all are reputable sites. ENJOY THE RNG!</p>
-        </header><!--/.banner-->
+    <header role = “banner”>
+        <h1 class="headline brad">Random Link</h1>
+        <p class="tagline">ENJOY THE RNG!</p>
+    </header>
+    <main role =”main”>
+        <p>ALL possible links are wholesome, educational, or charitable. None of
+            them will link to opinions or false information. No possible link will harm your computer and all are reputable sites. </p>
         <button value="random link!" onClick="randomlinks()">content</button>
     </main>
     <script src="js/menu.js"></script>
