--- a/socialmedia.html
+++ b/socialmedia.html
@@ -48,11 +48,11 @@
             </ul>
         </nav>
     </div>
+    <header role = “banner”> 
+        <h1 class="headline">Social Media</h1>
+        <p class="tagline">Follow, subscribe, like, etc. I'm here for a good, wholesome time.</p>
+    </header>
     <main role =”main”> 
-        <header role = “banner”> 
-            <h1 class="headline">Social Media</h1>
-            <p class="tagline">Follow, subscribe, like, etc. I'm here for a good, wholesome time.</p>
-        </header><!--/.banner-->
         <a href="https://www.tiktok.com/@jakesaintg" class="big tiktok">
             <span class="sprite" alt="TikTok Logo"></span> 
             <div class="text">
