--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
                         <img src="imgs/christine.jpg" alt="Photo of wife Christine St. Germain">
                         <h4>Christine St. Germain</h4>
                     </a>
+                    <a href="https://www.linkedin.com/in/thomas-walker-9b803a12b/" class="drew">
+                        <img src="imgs/drew.jpg" alt="Photo of Thomas &quot;Drew&quot; Walker">
+                        <h4>Drew Walker</h4>
+                    </a>
+                    <a href="https://www.linkedin.com/in/paige-saint-germain-5a125b16b/" class="paige">
+                        <img src="imgs/paige.jpg" alt="Photo of sister Paige Saint Germain">
+                        <h4>Paige Saint Germain</h4>
+                    </a>
                 </div>
             </div>
         </div>
