cleaning up styling and starting to add more content

--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,10 @@
         <p class="tagline">Here are some of my thoughts! I would love to hear yours as well!</p>
     </header>
     <main role =”main”> 
-        <button onclick="blogShowHide()">Write Post</button>
+        <div class="buttons">
+            <button onclick="blogShowHide()">Write Post</button>
+            <button onclick="location.href='mailto:jakestgermain@outlook.com';">Report Post</button>
+        </div>
         <form class="form_full" id="form_full" action="">
             <div class="form_head">
                 <div class="form_item">
@@ -74,10 +77,10 @@
         <article id=post></article>
         <article class="post_full">
             <div class="post_head">
-                <h1 class="post_title">Post Title</h1>
+                <h1 class="post_title">Dev Blog 7: This Page, This Project</h1>
                 <div class="post_details">
-                    <h3 class="post_author">By: Post Author</h3>
-                    <h3 class="post_date">Post Date</h3>
+                    <h3 class="post_author">By: Jake St. Germain</h3>
+                    <h3 class="post_date">11/14/2020</h3>
                 </div>
             </div>
             <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
@@ -85,6 +88,66 @@
                 post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
+
+            </p>
+        </article>
+        <article class="post_full">
+            <div class="post_head">
+                <h1 class="post_title">Dev Blog 6: What's Next</h1>
+                <div class="post_details">
+                    <h3 class="post_author">By: Jake St. Germain</h3>
+                    <h3 class="post_date">10/30/2020</h3>
+                </div>
+            </div>
+            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+
+            </p>
+        </article>
+        <article class="post_full">
+            <div class="post_head">
+                <h1 class="post_title">Dev Blog 5: Wrapping It All Together</h1>
+                <div class="post_details">
+                    <h3 class="post_author">By: Jake St. Germain</h3>
+                    <h3 class="post_date">10/12/2020</h3>
+                </div>
+            </div>
+            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+
+            </p>
+        </article>
+        <article class="post_full">
+            <div class="post_head">
+                <h1 class="post_title">Dev Blog 4: JavaScript</h1>
+                <div class="post_details">
+                    <h3 class="post_author">By: Jake St. Germain</h3>
+                    <h3 class="post_date">9/20/2020</h3>
+                </div>
+            </div>
+            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+                post post post post post post post post post post post post post post post post post post post post post 
+
+            </p>
+        </article>
+        <article class="post_full">
+            <div class="post_head">
+                <h1 class="post_title">Dev Blog 3: I’ve been bad..</h1>
+                <div class="post_details">
+                    <h3 class="post_author">By: Jake St. Germain</h3>
+                    <h3 class="post_date">9/3/2020</h3>
+                </div>
+            </div>
+            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
@@ -95,16 +158,13 @@
         </article>
         <article class="post_full">
             <div class="post_head">
-                <h1 class="post_title">Post Title</h1>
+                <h1 class="post_title">Dev Blog 2: HTML and CSS</h1>
                 <div class="post_details">
-                    <h3 class="post_author">By: Post Author</h3>
-                    <h3 class="post_date">Post Date</h3>
+                    <h3 class="post_author">By: Jake St. Germain</h3>
+                    <h3 class="post_date">8/10/2020</h3>
                 </div>
             </div>
             <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
@@ -112,33 +172,13 @@
         </article>
         <article class="post_full">
             <div class="post_head">
-                <h1 class="post_title">Post Title</h1>
+                <h1 class="post_title">Dev Blog 1: “Nurses Eat Their Young”...do Developers?</h1>
                 <div class="post_details">
-                    <h3 class="post_author">By: Post Author</h3>
-                    <h3 class="post_date">Post Date</h3>
+                    <h3 class="post_author">By: Jake St. Germain</h3>
+                    <h3 class="post_date">8/2/2020</h3>
                 </div>
             </div>
             <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-            </p>
-        </article>
-        <article class="post_full">
-            <div class="post_head">
-                <h1 class="post_title">Post Title</h1>
-                <div class="post_details">
-                    <h3 class="post_author">By: Post Author</h3>
-                    <h3 class="post_date">Post Date</h3>
-                </div>
-            </div>
-            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
                 post post post post post post post post post post post post post post post post post post post post post 
