--- a/projects.html
+++ b/projects.html
@@ -49,8 +49,8 @@
         <nav> 
     </div>
     <header role = “banner”>
-        <h1 class="headline">Jake St. Germain</h1>
-        <p class="tagline">Registered Nurse and Registered Nerd. Part time developer and full time cat enthusiast.</p>
+        <h1 class="headline">Projects</h1>
+        <p class="tagline">I like to stay busy. Here are a couple of the projects that I would like to highlight from my GitHub!</p>
     </header>
     <main role =”main”> 
         <ul class="box">
