--- a/skills.html
+++ b/skills.html
@@ -57,12 +57,10 @@
             <span class="sprite" alt="Nurse symbol"></span> 
             <div class="text">
                 <h2 class="head">ICU Nurse</h2>
-                <p>Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                <p>Since 2016 I have been a Registered Nurse working in the Pediatric Intensive Care Unit. During this time I have gained additional training and acquired
+                    certifications in Pediatric Advanced Life Support (PALS) as well as training in PRISMA (Continuous Dialysis). I helped managed life support equipment
+                    and worked with multidisciplinary teammates deliver compassionate care. I would respond to rapid changes in patient condition and worked well under pressure.
+                    During the COVID-19 Pandemic, I transitioned to an Adult ICU to aid with the increasing numbers of critical patients.
                 </p>
             </div>
         </a>
@@ -70,13 +68,9 @@
             <span class="sprite" alt="Html5 and CSS Logo"></span>
             <div class="text">
                 <h2 class="head">Front End Web</br>Development</h2>
-                <p>Always learning! Still working to be the best developer that I can.Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                <p>I recently decided to work on transitioning to software and web development as a career. Through Code Louisville and Treehouse,
+                    I have gained knowledge and experience in Front End Web Development. I intend to always be learning by soaking up as much knowledge
+                    as my classes and mentors are able to share. I am still working to be the best developer that I can and hope to break into the tech industry soon! Stay tuned! 
                 </p>
             </div>
         </a>
@@ -84,12 +78,8 @@
             <span class="sprite" alt="Blender Logo"></span>
             <div class="text">
                 <h2 class="head">Blender</h2>
-                <p>Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
-                    Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content Content 
+                <p>It’s a hobby! I started this as a stress relief in college and utilized it for event posters on campus as well as a couple of
+                    video projects for school. One day I hope to use the 3D Modeling experience in web, software, and game development! 
                 </p>
             </div>
         </a>
