--- a/socialmedia.html
+++ b/socialmedia.html
@@ -57,7 +57,7 @@
             <span class="sprite" alt="TikTok Logo"></span> 
             <div class="text">
                 <h2 class="head">TikTok</h2>
-                <p>Here is where I make silly videos as a stress relief! They are mostly centered around nursing but I do have a few that focus
+                <p>I make silly videos as a stress relief! They are mostly centered around nursing but I do have a few that focus
                 on my other interests. I try not to take it too seriously but I certainly have fun making the videos and interacting with the community!
                 </p>
             </div>
@@ -73,11 +73,8 @@
             <span class="sprite" alt="Linkedin Logo"></span>
             <div class="text">
                 <h2 class="head">Linkedin</h2>
-                <p>Professional Professional Professional Professional Professional Professional Professional
-                     Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional
-                     Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional
-                     Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional Professional
-                     Professional Professional Professional Professional Professional Professional Professional Professional</p>
+                <p>Here is my professional profile through Linkedin. You will find information on my nursing career as well as my progress on becoming a 
+                    software developer. Networking is certainly important so please feel free to add me as a connection!</p>
             </div>
         </a>
         <div class="smallsocial">
