started converting Other to a Contact page.

--- a/socialmedia.html
+++ b/socialmedia.html
@@ -40,7 +40,7 @@
                     <a class="nav" href="blog.html">Blog</a>
                 </li>
                 <li>
-                    <a class="nav" href="other.html">Other</a>
+                    <a class="nav" href="contact.html">Contact</a>
                 </li>
                 <li class="copy nav">
                     <footer role = “contentinfo”>&#169;1993 JakeSaintG</footer>
@@ -77,6 +77,28 @@
                     software developer. Networking is certainly important so please feel free to add me as a connection!</p>
             </div>
         </a>
+        <div class="minecraft">
+            <h2>Minecraft Servers</h2>
+            <p>Please be respectful if you join!</p>
+            <div>
+                <a href="https://realms.gg/1QpRIVv-ozE" class="bedrock"> 
+                    <img height=160px width=160px src="imgs/bedrock.png" alt="Minecraft Bedrock Logo">
+                    <div>
+                        <h2 class="head">Bedrock</h2>
+                        <p>Here is a server hosting the Bedrock Edition of Minecraft that some of my buddies and I play on! Clicking this box will pretty much just take you to the server. Griefing and theft will not be tolerated. The world is regularly backed up. Come join!
+                        </p>
+                    </div>
+                </a>
+                <a href="mailto:jakestgermain@outlook.com?subject=Server IP Request&body=Hello! I would like to be added to the Java Minecraft Server! I wish to play casual survival Minecraft with a bunch of easy-going nerds. By sending this email, I am aware that griefing and theft will not be tolerated." class="java">
+                    <img height=160px width=160px src="imgs/java.png" alt="Minecraft Realms Logo">
+                    <div>
+                        <h2 class="head">Java</h2>
+                        <p>Here is a server hosting an UNMODDED Java Edition of Minecraft that some of my buddies and I play on! Clicking this box will open an IP Address request. The more the merrier! Come join!
+                        </p>
+                    </div>
+                </a>
+            </div>
+        </div>
         <div class="smallsocial">
             <a href="https://linktr.ee/JakeSaintG" class="small linktree">
                 <span class="smallsprite" alt="Linktree Logo"></span>
