--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
                     <a class="activelink nav" href="blog.html">Blog</a>
                 </li>
                 <li>
-                    <a class="nav" href="other.html">Other</a>
+                    <a class="nav" href="contact.html">Contact</a>
                 </li>
                 <li class="copy nav">
                     <footer role = “contentinfo”>&#169;1993 JakeSaintG</footer>
