--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>JakeSaintG</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/socialmedia.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -40,24 +40,27 @@
                     <a class="nav" href="blog.html">Blog</a>
                 </li>
                 <li>
-                    <a class="nav" href="contact.html">Contact</a>
+                    <a class="activelink nav" href="contact.html">Contact</a>
                 </li>
                 <li class="copy nav">
                     <footer role = “contentinfo”>&#169;1993 JakeSaintG</footer>
                 </li>
             </ul>
-        </nav>
+        </nav> 
     </div>
-    <header role = “banner”> 
-        <h1 class="headline">Page Not Found</h1>
-        <p class="tagline">"This is not the page that you are looking for." ~ Ben Kenobi</p>
+    <header role = “banner”>
+        <h1 class="headline brad">Contact Me</h1>
+        <p class="tagline">Wanna get in touch? Here are a couple of ways!</p>
     </header>
     <main role =”main”>
-        <div class="safety"> 
-            <p>Click the button below to head back to the main page.</p>
-            <a href="index.html">Home</a>
+        <div>
+            <h2>Random Links!</h2>
+            <p>Here's something fun. Click the button below for a random link. ALL possible links are wholesome, educational, or charitable. None of
+                them will link to opinions or false information. No possible link will harm your computer and all are reputable sites. </p>
+            <button value="random link!" onClick="randomlinks()">Enjoy!</button>
         </div>
     </main>
     <script src="js/menu.js"></script>
+    <script src="js/randomlink.js"></script>
 </body>
 </html>
