updated contact page

--- a/socialmedia.html
+++ b/socialmedia.html
@@ -69,7 +69,7 @@
                 <p>I try to stay busy and keep my skills up-to-date. Some projects are more complete than others but I have learned from each and every one!</p>
             </div>
         </a>
-        <a href="https://github.com/jakesaintg/" class="big linkedin">
+        <a href="https://www.linkedin.com/in/jake-st-germain-b6a3a293/" class="big linkedin">
             <span class="sprite" alt="Linkedin Logo"></span>
             <div class="text">
                 <h2 class="head">Linkedin</h2>
