--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,26 @@
         <p class="tagline">Wanna get in touch? Here are a couple of ways!</p>
     </header>
     <main role =”main”>
-        <div>
+        <a class="contact email" href="mailto:jakestgermain@outlook.com">
+            <img src="imgs/mail.png" alt="mail icon" height="180px" width="180px">
+            <h2>Email Me</h2>
+            <p>You can reach me here on my professional email account. Please be respectful! </p>
+        </a>
+        <a class="contact resume" href="imgs/Jake_St.Germain_2020_Site.pdf">
+            <img src="imgs/document.png" alt="document icon" height="180px" width="180px">
+            <h2>My Resume</h2>
+            <p>Here is my current resume. This is my generic version and not tailored to a specific position or company. </p>
+        </a>
+        <a class="contact linkedin" href="https://www.linkedin.com/in/jake-st-germain-b6a3a293/">
+            <div class="sprite" alt="Linkedin Logo"></div>
+            <h2>LinkedIn</h2>
+            <p>Here's another way to my LinkedIn. Feel free to send me a message or connection request!</p>
+        </a>
+        <div class="contact random" onClick="randomlinks()">
+            <img src="imgs/link.png" alt="link icon" height="180px" width="180px">
             <h2>Random Links!</h2>
-            <p>Here's something fun. Click the button below for a random link. ALL possible links are wholesome, educational, or charitable. None of
+            <p>Here's just something fun. Click the button below for a random link. ALL possible links are wholesome, educational, or charitable. None of
                 them will link to opinions or false information. No possible link will harm your computer and all are reputable sites. </p>
-            <button value="random link!" onClick="randomlinks()">Enjoy!</button>
         </div>
     </main>
     <script src="js/menu.js"></script>
